@@ -4,7 +4,7 @@ import hudson.ExtensionPoint;
 import hudson.model.AbstractDescribableImpl;
 import hudson.model.Descriptor;
 import java.io.File;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import jenkins.model.Jenkins;
 import org.apache.commons.lang.StringUtils;
 
@@ -12,7 +12,7 @@ public abstract class SshHostKeyVerificationStrategy<T extends HostKeyVerifierFa
         extends AbstractDescribableImpl<SshHostKeyVerificationStrategy<T>> implements ExtensionPoint {
 
     public static final String KNOWN_HOSTS_DEFAULT =
-            Paths.get(System.getProperty("user.home"), ".ssh", "known_hosts").toString();
+            Path.of(System.getProperty("user.home"), ".ssh", "known_hosts").toString();
     private static final String JGIT_KNOWN_HOSTS_PROPERTY =
             SshHostKeyVerificationStrategy.class.getName() + ".jgit_known_hosts_file";
     private static final String JGIT_KNOWN_HOSTS_FILE_PATH =
