@@ -121,7 +121,7 @@ public class FilePermissionsTest {
     }
 
     private static void verifyFile(File repo, int staticPerm) throws IOException {
-        String fileName = String.format("git-%03o.txt", staticPerm);
+        String fileName = "git-%03o.txt".formatted(staticPerm);
         File file = new File(repo, fileName);
         assertTrue("Missing " + file.getAbsolutePath(), file.exists());
         String content = Files.readString(file.toPath(), StandardCharsets.UTF_8);
@@ -167,7 +167,7 @@ public class FilePermissionsTest {
     }
 
     private String getFileName() {
-        return String.format("git-%03o.txt", permission);
+        return "git-%03o.txt".formatted(permission);
     }
 
     private void addFile() throws IOException, GitException, InterruptedException {
@@ -184,7 +184,7 @@ public class FilePermissionsTest {
         Path path = FileSystems.getDefault().getPath(added.getPath());
         assertEquals(path, Files.setPosixFilePermissions(path, filePerms(permission)));
         git.add(fileName);
-        git.commit(String.format("Perms %03o %s", permission, fileName));
+        git.commit("Perms %03o %s".formatted(permission, fileName));
     }
 
     private void modifyFile() throws IOException, GitException, InterruptedException {
